# server/src/routes/Comment.js
@@ -17,6 +17,9 @@ const commentsToDTO = (comments) => {
 
 router.get('/recipe/:id', async (req, res) => {
     // #swagger.tags = ['Comments']
+    /* #swagger.security = [{
+               "bearerAuth": []
+        }] */
     const recipe = await Recipe.findById(req.params.id).populate('comments.user')
     if (!recipe) {
         return res.status(404).send("Przepis nie istnieje")
@@ -28,6 +31,9 @@ router.get('/recipe/:id', async (req, res) => {
 
 router.post('/recipe/:id', authenticate, async (req, res) => {
     // #swagger.tags = ['Comments']
+    /* #swagger.security = [{
+               "bearerAuth": []
+        }] */
     const recipe = await Recipe.findById(req.params.id).populate('comments.user')
     if (!recipe) {
         return res.status(404).send("Przepis nie istnieje")
@@ -50,6 +56,9 @@ router.post('/recipe/:id', authenticate, async (req, res) => {
 
 router.put('/recipe/:id/comment/:comment_id', authenticate, async (req, res) => {
     // #swagger.tags = ['Comments']
+    /* #swagger.security = [{
+               "bearerAuth": []
+        }] */
     const recipe = await Recipe.findById(req.params.id).populate('comments.user')
     if (!recipe) {
         return res.status(404).send("Przepis nie istnieje")
@@ -74,6 +83,9 @@ router.put('/recipe/:id/comment/:comment_id', authenticate, async (req, res) => 
 
 router.delete('/recipe/:id/comment/:comment_id', authenticate, async (req, res) => {
     // #swagger.tags = ['Comments']
+    /* #swagger.security = [{
+               "apiKeyAuth": []
+        }] */
     const recipe = await Recipe.findById(req.params.id).populate('comments.user')
     if (!recipe) {
         return res.status(404).send("Przepis nie istnieje")
